(refactor): replace async cleanup loop with cron job
Cleanup runs as a cron job every 12 hours instead of an asyncio loop
inside the web process. More reliable and decoupled from the app.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,9 @@ services:
     ports:
       - "8802:8802"
     volumes:
-      - drop_data:/data
+      - ./data:/data
     environment:
       - DATA_DIR=/data
       - DROP_ADMIN_USER=${DROP_ADMIN_USER:-admin}
       - DROP_ADMIN_PASS=${DROP_ADMIN_PASS:-admin}
     restart: unless-stopped
-
-volumes:
-  drop_data:
